--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,9 +2,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: black;
-  /*   background-image: linear-gradient(to right top, #000000, #261d25, #3a384e, #395979, #177f9b, #138dab, #0d9bbc, #00aacc, #00a1e3, #0094f7, #0081ff, #7763f9);
-   */
+  background-image: linear-gradient(to right top, #000000, #261d25, #3a384e, #395979, #177f9b, #138dab, #0d9bbc, #00aacc, #00a1e3, #0094f7, #0081ff, #7763f9);
 }
 
 @media only screen and (max-width: 425px) {
@@ -36,6 +34,53 @@ body {
     background-color: white;
     color: blue;
   }
+  .About {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+    color: white;
+  }
+  .About .name {
+    margin-bottom: 0;
+  }
+  .About .tytle {
+    order: 2;
+    margin-bottom: 0;
+    align-self: start;
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+  .About .Mypicture {
+    order: 1;
+    width: 80%;
+  }
+  .About .information {
+    order: 3;
+    display: flex;
+    word-break: break-all;
+    margin-top: 0;
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+  .About .icons {
+    order: 4;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    /*       grid-template-areas: 
+          "EmailP InstagramP LinkedInP"
+          "EmailLogo InstagramLogo LinkedInLogo"; */
+  }
+  .About .icons .iconName {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+  }
+  .About .icons .Logo {
+    width: 50%;
+    margin-bottom: 3rem;
+  }
 }
 @media only screen and (min-width: 426px) and (max-width: 768px) {
   .Header {
@@ -63,6 +108,94 @@ body {
     background-color: white;
     color: blue;
   }
+  .About {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-areas: "name Mypicture" "tytle  Mypicture" "information Mypicture" "icons Mypicture";
+    background-color: black;
+    color: white;
+    /*     .icons{
+          grid-area: icons;
+          display: grid;
+          grid-template-columns: 1fr 2fr;
+          grid-template-areas: 
+          "EmailLogo EmailLINK"
+          "InstagramLogo InstagramLINK"
+          "LinkedInLogo LinkedInLINK";
+          .iconName{
+            place-items: left;
+            margin-left: 2rem;
+          }
+          .Logo{
+            justify-self: flex-end;
+            width: 30%;
+            margin-bottom: 1rem;
+          }
+        }
+
+
+        #EmailLogo{
+          grid-area: EmailLogo;
+        }
+        #EmailLINK{
+          grid-area: EmailLINK;
+        }
+        #InstagramLogo{
+          grid-area: InstagramLogo;
+        }
+        #InstagramLINK{
+          grid-area: InstagramLINK;
+        }
+        #LinkedInLogo{
+          grid-area: LinkedInLogo;
+        }
+        #LinkedInLINK{
+          grid-area: LinkedInLINK;
+        }*/
+  }
+  .About .name {
+    grid-area: name;
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+  .About .tytle {
+    grid-area: tytle;
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+    margin-bottom: 0;
+  }
+  .About .information {
+    grid-area: information;
+  }
+  .About .icons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  .About .icons .iconName {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+  }
+  .About .icons .Logo {
+    width: 50%;
+    margin-bottom: 3rem;
+  }
+  .About .Mypicture {
+    grid-area: Mypicture;
+    align-self: center;
+    width: 90%;
+  }
+  .About .information {
+    order: 3;
+    display: flex;
+    word-break: break-all;
+    margin-top: 0;
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+  }
 }
 @media only screen and (min-width: 769px) {
   .Header {
@@ -73,8 +206,9 @@ body {
     align-items: center;
     border-bottom: solid 1px white;
   }
-  .Header h1 {
+  .Header h2 {
     justify-self: center;
+    margin-left: 1rem;
   }
   .Header nav {
     display: flex;
@@ -88,6 +222,56 @@ body {
     background-size: contain;
     background-color: white;
     color: blue;
+  }
+  .About {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-areas: "name Mypicture" "tytle  Mypicture" "information Mypicture" "icons Mypicture";
+    background-color: black;
+    color: white;
+  }
+  .About .name {
+    grid-area: name;
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+  .About .tytle {
+    grid-area: tytle;
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+    margin-bottom: 0;
+  }
+  .About .information {
+    grid-area: information;
+  }
+  .About .icons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  .About .icons .iconName {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+  }
+  .About .icons .Logo {
+    width: 50%;
+    margin-bottom: 3rem;
+  }
+  .About .Mypicture {
+    grid-area: Mypicture;
+    align-self: center;
+    width: 90%;
+  }
+  .About .information {
+    order: 3;
+    display: flex;
+    word-break: break-all;
+    margin-top: 0;
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
   }
 }
 
