--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,9 +12,8 @@ body{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: black;
-/*   background-image: linear-gradient(to right top, #000000, #261d25, #3a384e, #395979, #177f9b, #138dab, #0d9bbc, #00aacc, #00a1e3, #0094f7, #0081ff, #7763f9);
- */
+  background-image: linear-gradient(to right top, #000000, #261d25, #3a384e, #395979, #177f9b, #138dab, #0d9bbc, #00aacc, #00a1e3, #0094f7, #0081ff, #7763f9);
+
 }
 
 @media only screen and (max-width:425px){
@@ -46,6 +45,52 @@ body{
     }
     }
   }
+
+  .About{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:black;
+    color: white;
+    .name{
+      margin-bottom: 0;
+    }
+    .tytle{
+      order: 2;
+      margin-bottom: 0;
+      align-self: start;
+      @include MarginLR(3rem)
+   }
+    .Mypicture{
+      order: 1;
+      width: 80%;
+    }
+    .information{
+      order: 3;
+      display: flex;
+      word-break: break-all;
+      margin-top: 0;
+      @include MarginLR(3rem)
+    }
+    .icons{
+      order: 4;
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      place-items: center;
+/*       grid-template-areas: 
+      "EmailP InstagramP LinkedInP"
+      "EmailLogo InstagramLogo LinkedInLogo"; */
+      .iconName{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 0;
+      }
+      .Logo{
+        width: 50%;
+        margin-bottom: 3rem;
+      }
+    }
+  }
 }
 
 @media only screen and (min-width:426px) and (max-width:768px){
@@ -75,6 +120,97 @@ body{
       }
     }
   }
+
+  .About{
+    display: grid;
+    grid-template-columns:  3fr 2fr;
+    grid-template-areas: 
+    "name Mypicture"
+    "tytle  Mypicture"
+    "information Mypicture"
+    "icons Mypicture";    
+    background-color:black;
+    color: white;
+    .name{
+      grid-area: name;
+      @include MarginLR(3rem);
+    }
+    .tytle{
+      grid-area: tytle;
+      @include MarginLR(3.5rem);
+      margin-bottom: 0;
+    }
+    .information{
+      grid-area: information;
+    }
+    .icons{
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      place-items: center;
+      @include MarginLR(2rem);
+      .iconName{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 0;
+      }
+      .Logo{
+        width: 50%;
+        margin-bottom: 3rem;
+      }
+    }
+
+/*     .icons{
+      grid-area: icons;
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      grid-template-areas: 
+      "EmailLogo EmailLINK"
+      "InstagramLogo InstagramLINK"
+      "LinkedInLogo LinkedInLINK";
+      .iconName{
+        place-items: left;
+        margin-left: 2rem;
+      }
+      .Logo{
+        justify-self: flex-end;
+        width: 30%;
+        margin-bottom: 1rem;
+      }
+    }
+ 
+ 
+    #EmailLogo{
+      grid-area: EmailLogo;
+    }
+    #EmailLINK{
+      grid-area: EmailLINK;
+    }
+    #InstagramLogo{
+      grid-area: InstagramLogo;
+    }
+    #InstagramLINK{
+      grid-area: InstagramLINK;
+    }
+    #LinkedInLogo{
+      grid-area: LinkedInLogo;
+    }
+    #LinkedInLINK{
+      grid-area: LinkedInLINK;
+    }*/
+    .Mypicture{
+      grid-area: Mypicture;
+      align-self: center;
+      width: 90%;
+    }
+    .information{
+      order: 3;
+      display: flex;
+      word-break: break-all;
+      margin-top: 0;
+      @include MarginLR(3.5rem)
+    }
+  }
+
 }
 
 @media only screen and (min-width:769px){
@@ -85,8 +221,9 @@ body{
     grid-template-columns: 1fr 3fr;
     align-items: center;
     border-bottom: solid 1px white;
-    h1{
+    h2{
       justify-self: center;
+      margin-left: 1rem;
     }
     nav{
       display: flex;
@@ -102,4 +239,57 @@ body{
       }
     }
   }
+
+  .About{
+    display: grid;
+    grid-template-columns:  3fr 2fr;
+    grid-template-areas: 
+    "name Mypicture"
+    "tytle  Mypicture"
+    "information Mypicture"
+    "icons Mypicture";    
+    background-color:black;
+    color: white;
+    .name{
+      grid-area: name;
+      @include MarginLR(3rem);
+    }
+    .tytle{
+      grid-area: tytle;
+      @include MarginLR(3.5rem);
+      margin-bottom: 0;
+    }
+    .information{
+      grid-area: information;
+    }
+    .icons{
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      place-items: center;
+      @include MarginLR(2rem);
+      .iconName{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 0;
+      }
+      .Logo{
+        width: 50%;
+        margin-bottom: 3rem;
+      }
+    }
+
+    .Mypicture{
+      grid-area: Mypicture;
+      align-self: center;
+      width: 90%;
+    }
+    .information{
+      order: 3;
+      display: flex;
+      word-break: break-all;
+      margin-top: 0;
+      @include MarginLR(3.5rem)
+    }
+  }
+
 }
