--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,8 +12,7 @@ body{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-image: linear-gradient(to right top, #645b9b, #4c6ead, #2b80b7, #0091bb, #00a0b8, #00a6bf, #00acc6, #00b2cd, #00b0e2, #35aaf3, #6fa2fb, #a295f8);
-
+  background-image: linear-gradient(to right top, #0077b6, #1c8bc2, #369fcd, #50b2d7, #6bc6e1, #7dd0e6, #8fdaeb, #a0e4f1, #abe7f3, #b6eaf5, #c0edf6, #caf0f8);
 }
 
 @media only screen and (max-width:425px){
@@ -101,6 +100,43 @@ body{
     }
   }
 
+  .Project{
+    min-height: 100vh;
+    .title{
+      display: block;
+      border-top: 0.5px solid rgb(60, 24, 156);
+      margin-bottom: 1rem;
+    }
+    .ProjectGrid{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;  
+      row-gap: 3vh;
+      .POutline{
+        display: grid;
+        grid-template-rows: 1fr 3fr;
+        background-color: #00B4D8;
+        box-shadow: 10px 5px 5px #0077b6;
+        border-radius: 5%;
+        width: 45vw;
+        place-items: center;
+        h2{
+          margin: 1vh 0;
+        }
+        .image{
+          max-width: 90%;
+        }
+      }  
+    }
+    .ShowMore{
+      display: block;
+      text-align: right;
+      margin-top: 3rem;
+      padding-right: 3rem;
+      text-decoration: underline;
+    }
+  }
+
   .Skills{
     min-height: 100vh;
     .title{
@@ -152,8 +188,11 @@ body{
   h1 {
     font-family: Courgette;      
     font-size: 48px;
+    @include MarginLR(2rem);
+    margin-bottom: 0;
+    margin-top: 1rem;
   }
-.Header{
+  .Header{
     padding: 0 2rem;
     h2{
       margin-top: 0;
@@ -199,8 +238,6 @@ body{
     }
     .tytle{
       grid-area: tytle;
-      @include MarginLR(2rem);
-      margin-bottom: 0;
       .information{
         grid-area: information;
         @include MarginLR(2rem);
@@ -235,6 +272,43 @@ body{
       span{
         color: rgb(192, 255, 18);
       }
+    }
+  }
+
+  .Project{
+    max-height: 100vh;
+    .title{
+      display: block;
+      border-top: 0.5px solid rgb(60, 24, 156);
+    }
+    .ProjectGrid{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;  
+      row-gap: 2vh;
+      .POutline{
+        display: grid;
+        grid-template-rows: 1fr 3.5fr;
+        background-color: #00B4D8;
+        box-shadow: 10px 5px 5px #0077b6;
+        border-radius: 5%;
+        width: 40vw;
+        place-items: center;
+        h2{
+          margin: 0.3vh 0;
+        }
+        .image{
+          max-width: 90%;
+          margin-bottom: 1rem;
+        }
+      }  
+    }
+    .ShowMore{
+      display: block;
+      text-align: right;
+      margin-top: 2rem;
+      padding-right: 3rem;
+      text-decoration: underline;
     }
   }
 
@@ -294,6 +368,7 @@ body{
   h1 {
     font-family: Courgette;      
     font-size: 60px;
+    @include MarginLR(2rem);
   }
 
   .Header{
@@ -340,7 +415,6 @@ body{
     }
     .tytle{
       grid-area: tytle;
-      @include MarginLR(2rem);
       margin-bottom: 0;
       h2{
         color: #d6a284;
@@ -377,6 +451,47 @@ body{
       justify-self: center;
       align-self: center;
       max-width: 80%;
+    }
+  }
+
+  .Project{
+    height: 100vh;
+    .title{
+      display: block;
+      border-top: 0.5px solid rgb(60, 24, 156);
+      margin-bottom: 1rem;
+    }
+    .ProjectGrid{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-items: center;  
+      row-gap: 3vh;
+      @include MarginLR(2rem);
+      .POutline{
+        display: grid;
+        grid-template-rows: 1fr 4fr;
+        background-color: #00B4D8;
+        box-shadow: 10px 5px 5px #0077b6;
+        border-radius: 5%;
+        width: 28vw;
+        max-width: 450px;
+        margin-top: 2rem;
+        place-items: center;
+        h2{
+          margin: 1vh 0;
+        }
+        .image{
+          max-width: 90%;
+          margin-bottom: 1rem;
+        }
+      }  
+    }
+    .ShowMore{
+      display: block;
+      text-align: right;
+      margin-top: 4rem;
+      padding-right: 3rem;
+      text-decoration: underline;
     }
   }
 
